--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand p-0" href="/">
+        <a class="navbar-brand p-0" href="#">
           <img src="LS.svg" alt="LS" width="40" />
         </a>
         <button
