--- a/places.html
+++ b/places.html
@@ -33,7 +33,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand p-0" href="#">
+        <a class="navbar-brand p-0" href="index.html">
           <img src="LS.svg" alt="LS" width="40" />
         </a>
         <button
